add chat page(left side bar)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
-// Удалось достичь билда применив декомпозицию, поменяв архитектуру, но пришлось для ускорения развертывания пренебречь еслинтом, в лучшее время раскомментить и пофиксить:)
+// Удалось достичь билда применив декомпозицию, поменяв архитектуру, прописав типизацию, но пришлось для ускорения развертывания пренебречь еслинтом, в лучшее время раскомментить и пофиксить:)
 // {
 //   "env": {
 //     "browser": true,
