--- a/codegen.yml
+++ b/codegen.yml
@@ -4,8 +4,8 @@ schema: ./schema.graphql
 generates:
   generated/index.ts:
     documents:
-      - "src/**/*.{ts,tsx}"
-      - "!src/**/*.generated.{ts,tsx}"
+      - 'src/**/*.{ts,tsx}'
+      - '!src/**/*.generated.{ts,tsx}'
     plugins:
       - typescript
       - typescript-operations
