--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-window": "^1.8.10",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "sharp": "^0.33.2",
     "subscriptions-transport-ws": "^0.11.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
