--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "tailwindcss-pseudo-elements": "^2.0.0",
     "unfetch": "^5.0.0",
     "usehooks-ts": "^2.13.0",
+    "useragent": "^2.3.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -90,6 +91,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
+    "@types/useragent": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/typescript-estree": "^6.21.0",
